# ChangeLog for media-plugins/vdr-restfulapi
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*vdr-restfulapi-9999 (28 Jul 2011)

  28 Jul 2011; kTitan +vdr-restfulapi-9999.ebuild, +metadata.xml:
  initial live ebuild
