@@ -1,2 +1,4 @@
-EBUILD vdr-restfulapi-9999.ebuild 490 RMD160 68a7e725177ea07766d1f8c2b0b52a4c505a35de SHA1 82744ac007fa34fae8ea098e4d4c91dfcba9e6b4 SHA256 e05c71bc6772564276ac9c341012387a023f775f39fcae7c2859358b66c5c343
+AUX confd 185 RMD160 e52a91d1307763d3137ef209820c3d82292f2c2b SHA1 3daeadd8c45ceca11d1f59ce35f3cbf1f5531698 SHA256 00a834cfda6112e3ff08d0350cb6a5b02a661a015372bb8c905e04d88694909f
+EBUILD vdr-restfulapi-9999.ebuild 596 RMD160 edd7bfd82c6fd92ae8d93a1e04caec375d3f4fb6 SHA1 fac84449755c7505c3f1e87cbb058fe304aebbb1 SHA256 65ab70be9b7a5010aea1e914268e105965a013f4c8f3e15193294e7271342e3c
+MISC ChangeLog 254 RMD160 e506187a6333e3cd1e261a57f8d77a2eacd80d5c SHA1 df1e3ffee4bf75ad1782e435a7bc53dd8de8cf5e SHA256 7cebe074f9f2805062c995d8c8ca3f4ca01863f7908aba1c05b45f43981f5c43
 MISC metadata.xml 152 RMD160 f7a986538ad57634fa243b3cc1fce04d69c47033 SHA1 30196189cc90f01c38c6214297a9a0582aedd1e0 SHA256 055ec38ed90eec2246b75e864b07ccc9c674d250617ba93be692850b0ec1e68f
