@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  30 Jul 2011; kTitan vdr-restfulapi-9999.ebuild, +files/confd:
+  added conf.d file, little fixes
+
 *vdr-restfulapi-9999 (28 Jul 2011)
 
   28 Jul 2011; kTitan +vdr-restfulapi-9999.ebuild, +metadata.xml:
